# GeoCraft

./: .gitignore  README.md  cspell.json  pyproject.toml  pytest.ini
.github/workflows/: publish.yml  workflow.yml
geocraft/_scripts/: parse_baidumap.py
geocraft/unstable/: __init__.py  _baidumap_parser.py  _classes.py  polygon_output_type.py
tests/: test_coord_converter.py
tests/cn/: test_coordinate_converter.py
