[tool.poetry]
name = "geocraft"
version = "0.1.5"
description = "Geo (WebGIS) related tools"
authors = ["Shangjin Tang <shangjin.tang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
