[tool.poetry]
name = "geocraft"
version = "0.2.0"
description = "Python library for Geo & WebGIS."
authors = ["Shangjin Tang <shangjin.tang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
coord-convert = "scripts.coord_convert:main"
parse-baidumap = "scripts.parse_baidumap:main"
